[IMP] fastapi: Improves modularity and demo app
* add default empty method to use as dependency to get the authenticated partner
* improves the demo app to illustrate the way the dependency overrides mechanism can be used to provide the right implementation to use to retrieve the authenticated partner according to the security method configured on the app
* add tests for the demo app to show how the TestClient class and the dependey overrides functianality should be used to easily write tests

--- a/fastapi/views/fastapi_endpoint.xml
+++ b/fastapi/views/fastapi_endpoint.xml
@@ -32,6 +32,7 @@
                         <field name="redoc_url" widget="url" />
                         <field name="openapi_url" widget="url" />
                     </group>
+                    <span name="configuration" />
                 </sheet>
             </form>
         </field>
