[IMP] fastapi: Allows to define the user executing the api calls

--- a/fastapi/views/fastapi_endpoint.xml
+++ b/fastapi/views/fastapi_endpoint.xml
@@ -25,6 +25,7 @@
                         <field name="active" invisible="1" />
                         <field name="app" />
                         <field name="root_path" />
+                        <field name="user_id" />
                         <field name="description" />
                     </group>
                     <group name="resoures">
