--- a/fastapi/views/fastapi_endpoint.xml
+++ b/fastapi/views/fastapi_endpoint.xml
@@ -11,28 +11,46 @@
                 <header>
                 </header>
                 <sheet>
+                    <field name="active" invisible="1" />
+                    <field name="registry_sync" invisible="1" />
+                    <div class="oe_button_box" name="button_box">
+                        <button
+                            name="action_sync_registry"
+                            string="Sync Registry"
+                            type="object"
+                            class="oe_highlight"
+                            icon="fa-refresh"
+                            attrs="{'invisible': [('registry_sync', '=', True)]}"
+                        />
+                    </div>
                     <widget
                         name="web_ribbon"
                         title="Archived"
                         bg_color="bg-danger"
                         attrs="{'invisible': [('active', '=', True)]}"
                     />
+                    <widget
+                        name="web_ribbon"
+                        title="Registry Sync Required"
+                        bg_color="bg-warning"
+                        attrs="{'invisible': [('registry_sync', '=', True)]}"
+                    />
                     <div class="oe_title">
                         <label for="name" />
                         <h1><field name="name" /></h1>
                     </div>
                     <group>
-                        <field name="active" invisible="1" />
+                    <group>
                         <field name="app" />
                         <field name="root_path" />
                         <field name="user_id" />
                         <field name="description" />
-                        <field name="registry_sync" />
                     </group>
                     <group name="resoures">
                         <field name="docs_url" widget="url" />
                         <field name="redoc_url" widget="url" />
                         <field name="openapi_url" widget="url" />
+                    </group>
                     </group>
                     <span name="configuration" />
                 </sheet>
@@ -67,14 +85,35 @@
         <field name="name">fastapi.endpoint.tree (in fastapi)</field>
         <field name="model">fastapi.endpoint</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree decoration-warning="not registry_sync" decoration-muted="not active">
+                <field name="active" invisible="1" />
+                <field name="registry_sync" invisible="1" />
                 <field name="name" />
                 <field name="app" />
                 <field name="root_path" />
                 <field name="docs_url" widget="url" />
                 <field name="redoc_url" widget="url" />
                 <field name="openapi_url" widget="url" />
+                <button
+                    name="action_sync_registry"
+                    string="Sync Registry"
+                    type="object"
+                    class="oe_highlight"
+                    icon="fa-refresh"
+                    attrs="{'invisible': [('registry_sync', '=', True)]}"
+                />
             </tree>
+        </field>
+    </record>
+
+    <record model="ir.actions.server" id="fastapi_endpoint_action_sync_registry">
+        <field name="name">Sync Registry</field>
+        <field name="model_id" ref="model_fastapi_endpoint" />
+        <field name="binding_model_id" ref="model_fastapi_endpoint" />
+        <field name="binding_type">action</field>
+        <field name="state">code</field>
+        <field name="code">
+            records.action_sync_registry()
         </field>
     </record>
 
