--- a/fastapi/views/fastapi_endpoint.xml
+++ b/fastapi/views/fastapi_endpoint.xml
@@ -46,7 +46,8 @@
                         <field name="user_id" />
                         <field name="company_id" />
                         <field name="description" />
-                        <field name="save_http_session" />                    </group>
+                        <field name="save_http_session" />
+                    </group>
                     <group name="resoures">
                         <field name="docs_url" widget="url" />
                         <field name="redoc_url" widget="url" />
