--- a/fastapi/views/fastapi_endpoint.xml
+++ b/fastapi/views/fastapi_endpoint.xml
@@ -87,7 +87,7 @@
         <field name="name">fastapi.endpoint.tree (in fastapi)</field>
         <field name="model">fastapi.endpoint</field>
         <field name="arch" type="xml">
-            <tree decoration-warning="not registry_sync" decoration-muted="not active">
+            <list decoration-warning="not registry_sync" decoration-muted="not active">
                 <field name="active" column_invisible="1" />
                 <field name="registry_sync" column_invisible="1" />
                 <field name="name" />
@@ -104,7 +104,7 @@
                     icon="fa-refresh"
                     invisible="registry_sync"
                 />
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -122,7 +122,7 @@
     <record model="ir.actions.act_window" id="fastapi_endpoint_act_window">
         <field name="name">FastAPI Endpoint</field>
         <field name="res_model">fastapi.endpoint</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
     </record>
